--- a/changelog.txt
+++ b/changelog.txt
@@ -4,6 +4,13 @@ All notable changes to this project will be documented in this file.
 The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
+## [0.3] - 2022-11-6
+### Added
+- Confidence for detecting objects can be now set by user.
+### Changed
+
+### Removed
+
 ## [0.2] - 2022-11-5
 ### Added
 - Pytroch based(see pytorch-ssd repo on github) backend for PC.
